--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,18 +18,18 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@11bd71901ebb512b2e29a90e7a2637d3612f7263
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Set up JDK 25
-        uses: actions/setup-java@b36c23c0d998641eff861008f2f2019f25eea465
+        uses: actions/setup-java@v4
         with:
           java-version: '25'
           distribution: 'temurin'
 
       - name: Cache Maven dependencies
-        uses: actions/cache@1bd1e32a3bdc2024cc2972658b11e1f8c4bebc4c
+        uses: actions/cache@v4
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
@@ -45,7 +45,7 @@ jobs:
           files: target/surefire-reports/*.xml
 
       - name: Upload test artifacts
-        uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b312241f0ee72d8d5
+        uses: actions/upload-artifact@v4
         if: always()
         with:
           name: test-results
@@ -57,10 +57,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@11bd71901ebb512b2e29a90e7a2637d3612f7263
+        uses: actions/checkout@v4
 
       - name: Set up JDK 25
-        uses: actions/setup-java@b36c23c0d998641eff861008f2f2019f25eea465
+        uses: actions/setup-java@v4
         with:
           java-version: '25'
           distribution: 'temurin'
@@ -76,7 +76,7 @@ jobs:
         run: mvn checkstyle:check
 
       - name: Upload Checkstyle results
-        uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b312241f0ee72d8d5
+        uses: actions/upload-artifact@v4
         if: always()
         with:
           name: checkstyle-results
@@ -89,25 +89,25 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@11bd71901ebb512b2e29a90e7a2637d3612f7263
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Set up JDK 25
-        uses: actions/setup-java@b36c23c0d998641eff861008f2f2019f25eea465
+        uses: actions/setup-java@v4
         with:
           java-version: '25'
           distribution: 'temurin'
 
       - name: Cache SonarCloud packages
-        uses: actions/cache@1bd1e32a3bdc2024cc2972658b11e1f8c4bebc4c
+        uses: actions/cache@v4
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
 
       - name: Cache Maven packages
-        uses: actions/cache@1bd1e32a3bdc2024cc2972658b11e1f8c4bebc4c
+        uses: actions/cache@v4
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
